--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 secret = "MYSECRET"   
-mongodb_url = "mongodb+srv://arthteerth12345:WaveCreativeEcho@cluster0.xyod3x9.mongodb.net/"
+mongodb_url = ""
