--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,18 @@ dist/
 build/
 .DS_Store
 npm-debug.log
+
+# Ignore env files
+.env
+frontend/.env
+backend/.env
+
+# Ignore node_modules everywhere
+node_modules/
+frontend/node_modules/
+backend/node_modules/
+
+# Optional extras
+dist/
+build/
+.DS_Store
