--- a/frontend/FE/package.json
+++ b/frontend/FE/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.5.0",
+    "lucide-react": "^0.518.0",
     "motion": "^12.5.0",
     "radix-ui": "^1.1.3",
     "react": "^19.0.0",
