--- a/frontend/FE/package.json
+++ b/frontend/FE/package.json
@@ -20,7 +20,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.6.1",
-    "tailwind-merge": "^3.0.2"
+    "tailwind-merge": "^3.0.2",
+    "websocket": "^1.0.35"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
